# Python_Projects

./: .gitignore  README.md  pyproject.toml
Creating_wheel_files/: Project_details.md  package_test.py  setup.py
Creating_wheel_files/wheel_pkg/: spl_pkg.py
flask_app/: build.ipynb  dockerfile  main.py
harness/: dep.yaml
