[project]
name = "uv-test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.1.0",
    "flask",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[tool.uv.sources]
flask = { git = "https://github.com/pallets/flask.git" }
